@@ -9,6 +9,7 @@ my @modules = all_modules;
 our @private = ( 'BUILD' );
 foreach my $module (@modules) {
     local @private = (@private, 'expand_class_name', 'make') if $module =~ /^Message::Passing::DSL::Factory$/;
+    local @private = (@private, 'get_config_from_file') if $module =~ /^Message::Passing$/;
 
     pod_coverage_ok($module, {
         also_private   => \@private,
